<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.android.rugbyscorer.MainActivity">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/rugby_8" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/team_a"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/_0"
            android:textColor="#000000"
            android:textSize="48sp" />

        <Button
            android:id="@+id/try_team_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="#80B2DFDB"
            android:onClick="scoreATryForTeamA"
            android:text="@string/Try"
            android:textSize="16dp" />

        <Button
            android:id="@+id/conversion_team_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="#8080CBC4"
            android:onClick="scoreAConversionForTeamA"
            android:text="@string/conversion"
            android:textSize="16dp" />

        <Button
            android:id="@+id/penalty_team_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="#804DB6AC"
            android:onClick="scoreAPenaltyForTeamA"
            android:text="@string/penalty_kick"
            android:textSize="16dp" />

        <Button
            android:id="@+id/dropkick_team_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="#8026A69A"
            android:onClick="scoreADropGoalForTeamA"
            android:text="@string/drop_kick"
            android:textSize="16dp" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/team_b"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/_0_team_b"
            android:textColor="#000000"
            android:textSize="48sp" />

        <Button
            android:id="@+id/try_team_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="#80B2DFDB"
            android:onClick="scoreATryForTeamB"
            android:text="@string/try_team_b"
            android:textSize="16dp" />

        <Button
            android:id="@+id/conversion_team_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="#8080CBC4"
            android:onClick="scoreAConversionTeamB"
            android:text="@string/conversion_team_b"
            android:textSize="16dp" />

        <Button
            android:id="@+id/penalty_team_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="#804DB6AC"
            android:onClick="scoreAPenaltyForTeamB"
            android:text="@string/penalty_kick_team_b"
            android:textSize="16dp" />

        <Button
            android:id="@+id/dropkick_team_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="#8026A69A"
            android:onClick="scoreADropGoalForTeamB"
            android:text="@string/drop_kick_team_b"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp"
    android:background="#009688"
    android:onClick="resetScores"
    android:text="@string/reset" />

</RelativeLayout>
